# broc-launch

./: CLAUDE.md  DESIGN.md  README.md  pyproject.toml  reinstall.sh
broc_launch/: config.py  hotkey.py  main.py  popup.py  tray.py
broc_launch/assets/: style.css
